<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/llTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_acc"
            android:orientation="horizontal" >

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/category_name"
                android:textSize="20sp" />

        </LinearLayout>

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTitle"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:hint="@string/title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCategory"
        android:background="@drawable/button_bg"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/view2"
            android:background="@drawable/button_primary_selector"
            android:onClick="clickDlgCancel"
            android:text="@string/cancel"
            android:textColor="@color/bg_gray4"
            android:textSize="15sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/view2"
            android:background="@drawable/button_primary_selector"
            android:onClick="clickDlgAdd"
            android:text="@string/add"
            android:textColor="@color/bg_gray4"
            android:textSize="15sp" />

   

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/shadow_list" />
    </RelativeLayout>

</RelativeLayout>