<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_exp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:padding="2dp"
                android:src="@drawable/wallet_56_bw" />

            <TextView
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/title_add_fix_expense"
                android:textSize="24sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@color/bg_gray1"
                    android:orientation="vertical"
                    android:padding="6dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <Spinner
                            android:id="@+id/spinCategoryIncome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@+id/ivEdit" />

                        <ImageView
                            android:id="@+id/ivEdit"
                            android:layout_width="38dp"
                            android:layout_height="38dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignWithParentIfMissing="false"
                            android:background="@drawable/button_primary_selector"
                            android:onClick="clickEditCategory"
                            android:padding="4dp"
                            android:src="@drawable/icon_edit" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/ivIcons"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:background="@drawable/button_primary_selector"
                            android:onClick="clickIcons"
                            android:padding="5dp"
                            android:src="@drawable/icon_60" />

                        <EditText
                            android:id="@+id/etTitleIncome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="6dp"
                            android:ems="10"
                            android:hint="@string/title"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@color/bg_gray1"
                    android:orientation="vertical"
                    android:padding="6dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_expense"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/etAmountIncome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:ems="11"
                            android:hint="@string/amount"
                            android:inputType="numberDecimal" />

                        <EditText
                            android:id="@+id/etCurrency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:focusable="false" />
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/spinAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@array/how_often" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@color/bg_gray1"
                    android:orientation="vertical"
                    android:padding="6dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_often"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <Spinner
                        android:id="@+id/spinHowOften"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/date_income"
                        android:inputType="date"
                        android:onClick="clickDate" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/view2"
            android:background="@drawable/button_primary_selector"
            android:onClick="clickSkip"
            android:text="@string/skip"
            android:textColor="@color/bg_gray4"
            android:textSize="15sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/view2"
            android:background="@drawable/button_primary_selector"
            android:onClick="clickAdd"
            android:text="@string/add"
            android:textColor="@color/bg_gray4"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/shadow_list" />
    </RelativeLayout>

</RelativeLayout>